K8S-Objects/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: nvisal1/rate-my-salary-client
      ports:
        - containerPort: 80
